# bootstrap

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  flake.nix  gen-flake  main.c
.githooks/: pre-commit
docs/: CMakeLists.txt  Doxyfile.in
include/: cJSON.h  config.h  console.h  dyn_array.h  error.h  evaluator.h  loader.h  parser.h  path.h  string_buf.h  string_utils.h  validator.h
specs/airflow/: runner
specs/airflow/template/: .gitignore  README.md  flake.nix
specs/airflow/template/dags/: example_custom.py
specs/clang/: run.sh  runner  spec.json
specs/clang/default/: flake.nix
specs/clang/template/: .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix  main.c
specs/clang/template/.githooks/: pre-commit
specs/clang/template/docs/: CMakeLists.txt  Doxyfile.in
specs/clang/template/include/: hello.h
specs/clang/template/src/: CMakeLists.txt  hello.c
specs/clang/template/test/: CMakeLists.txt  test_hello.c
specs/jekyll/: runner  spec.json
specs/jekyll/template/: Gemfile  flake.nix  gemset.nix
specs/mix/: runner  spec.json
specs/mix/template/: README.md  deps.nix  flake.nix
specs/mix/template/.githooks/: pre-commit
specs/nifi/: runner
specs/nifi/template/: README.md  flake.nix
specs/nodejs/: runner  spec.json  validate.cjs
specs/nodejs/template/: README.md  flake.nix  package-lock.json  package.json  tsconfig.json
specs/nodejs/template/.githooks/: pre-commit
specs/phoenix/: runner  spec.json
specs/phoenix/assets/: node-packages.nix  package-lock.json  package.json  tsconfig.json
specs/phoenix/template/: README-ecto.md  README-no-ecto.md  README.md  deps.nix  flake.nix
specs/phoenix/template/.githooks/: pre-commit
specs/poetry/: runner
specs/poetry/template/: .gitignore  README.md  flake.nix  pyproject.toml
specs/poetry/template/.githooks/: pre-commit
specs/postgres/: runner
specs/postgres/template/: .gitignore  README.md  flake.nix
specs/test/: spec.json
specs/touch/: runner  spec.json
src/: CMakeLists.txt  cJSON.c  config.c  dyn_array.c  error.c  evaluator.c  loader.c  parser.c  path.c  string_buf.c  string_utils.c  validator.c
test/: CMakeLists.txt  runner.c  sput.h  suites.c  test.c  test_cases.h  test_config.c  test_config.h  test_dyn_array.c  test_dyn_array.h  test_loader.h  test_parser.c  test_parser.h  test_path.h  test_string_buf.c  test_string_buf.h  test_string_utils.c  test_string_utils.h  test_validator.c  test_validator.h
